--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       display: none !important;
     }
 
+    .mono {
+      font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace !important;
+    }
+
     .hide {
       opacity: 0
     }
@@ -55,8 +59,45 @@
     }
 
     canvas {
+      position: fixed;
       width: 100dvw;
       height: 100dvh;
+    }
+
+    .links {
+      position: absolute;
+      z-index: 20;
+      right: 1em;
+      bottom: 1em;
+    }
+
+    .links button {
+      padding: 0.1em;
+      background: none;
+      border: 0;
+      outline: none;
+      color: var(--theme-blue);
+      cursor: pointer;
+      opacity: 75%;
+      transition: opacity 150ms;
+      font: inherit;
+    }
+
+    .links button:hover {
+      opacity: 100%;
+    }
+
+    .modal {
+      position: fixed;
+      inset: 0;
+      background: white;
+      font-family: system-ui, sans-serif;
+      padding: 2em;
+      border-radius: 1em;
+      border: solid 3px var(--theme-blue);
+      border-left-color: var(--theme-orange);
+      border-right-color: var(--theme-orange);
+      border-top-color: var(--theme-pink);
     }
 
     .prompt {
@@ -195,6 +236,49 @@
       </button>
     </footer>
   </main>
+
+  <nav class="links" x-data="{ open: false }">
+    <button class="mono" @click="open = true">
+      joyful.club
+    </button>
+
+    <dialog open x-cloak x-show="open" @click.outside="open = false" class="modal">
+      <p style="text-align: center;">
+        <img src="/logo.svg" height="70" style="margin: 2em 0"/>
+        <br />
+        <a href="/danprince/joyful/blob/main/joyful.club">joyful.club</a> is a tiny website for sharing joy
+        with others.
+      </p>
+      <h3>Clubs</h3>
+      <p>Each club has its own URL. Here are some examples:</p>
+      <ul>
+        <li><a href="https://joyful.club/books" rel="nofollow">joyful.club/books</a></li>
+        <li><a href="https://joyful.club/%F0%9F%90%B1" rel="nofollow">joyful.club/🐱</a></li>
+        <li><a href="https://joyful.club/adventures" rel="nofollow">joyful.club/adventures</a></li>
+      </ul>
+      <p>🤫 If you want a super-secret club with your friends, pick something no one will guess.</p>
+      <ul>
+        <li><a href="https://joyful.club/blue-flamingos-at-dawn" rel="nofollow">joyful.club/blue-flamingos-at-dawn</a>
+        </li>
+      </ul>
+      <h3>Sharing</h3>
+      <ul>
+        <li>📝 Posts can't be longer than 100 characters.</li>
+        <li>♻️ A new post will replace your previous post.</li>
+        <li>😊 Posts aren't moderated, so be nice!</li>
+      </ul>
+      <h3>Frequently Asked Questions</h3>
+      <ul>
+        <li><strong>Where can I ask questions?</strong> In <a href="https://joyful.club/faq"
+            rel="nofollow">joyful.club/faq</a>.</li>
+        <li><strong>Who can create a club?</strong> Anyone.</li>
+        <li><strong>Is there a list of all clubs?</strong> Nope.</li>
+        <li><strong>Can I see all of my own posts?</strong> Nope.</li>
+        <li><strong>Can I see all of the posts in a club?</strong> Nope, just one at a time!</li>
+        <li><strong>What order are the posts shown in?</strong> Totally random.</li>
+      </ul>
+    </dialog>
+  </nav>
 
   <!-- App -->
   <script>
