fix busted link

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
   <p>
     <img src="/logo.svg" height="70" style="margin: 2em 0" />
     <br />
-    <a href="/danprince/joyful/blob/main/joyful.club">joyful.club</a> is a tiny website for sharing joy
+    <a href="https://joyful.club">joyful.club</a> is a tiny website for sharing joy
     with others.
   </p>
   <h3>Clubs</h3>
