link the logo in about to the main site

--- a/about.html
+++ b/about.html
@@ -26,7 +26,9 @@
 
 <body>
   <p>
-    <img src="/logo.svg" height="70" style="margin: 2em 0" />
+    <a href="https://joyful.club">
+      <img src="/logo.svg" height="70" style="margin: 2em 0" />
+    </a>
     <br />
     <a href="https://joyful.club">joyful.club</a> is a tiny website for sharing joy
     with others.
